// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logAction can enhance async actionFunction to invoke actionFunction and return the same result 1`] = `
Array [
  Array [
    Object {
      "test": "a",
    },
    Object {
      "meta": "b",
    },
  ],
]
`;

exports[`logAction can enhance async actionFunction to log actionFunction failure and throw the caught error 1`] = `
Array [
  Array [
    Object {
      "action": "actionFunction",
      "category": "CUSTOM_ERROR",
      "message": "bar",
      "meta": "b",
      "result": "failure",
      "test": "a",
    },
  ],
]
`;

exports[`logAction can enhance async actionFunction to log event when actionFunction success 1`] = `
Array [
  Array [
    Object {
      "action": "actionFunction",
      "meta": "b",
      "test": "a",
    },
  ],
  Array [
    Object {
      "action": "actionFunction",
      "meta": "b",
      "result": "success",
      "test": "a",
    },
  ],
]
`;

exports[`logAction can enhance sync actionFunction to invoke actionFunction and return the same result 1`] = `
Array [
  Array [
    Object {
      "test": "a",
    },
    Object {
      "meta": "b",
    },
  ],
]
`;

exports[`logAction can enhance sync actionFunction to log actionFunction failure and throw the caught error 1`] = `
Array [
  Array [
    Object {
      "action": "actionFunction",
      "category": "CUSTOM_ERROR",
      "message": "bar",
      "meta": "b",
      "result": "failure",
      "test": "a",
    },
  ],
]
`;

exports[`logAction can enhance sync actionFunction to log event when actionFunction success 1`] = `
Array [
  Array [
    Object {
      "action": "actionFunction",
      "meta": "b",
      "test": "a",
    },
  ],
  Array [
    Object {
      "action": "actionFunction",
      "meta": "b",
      "result": "success",
      "test": "a",
    },
  ],
]
`;

exports[`logAction throw erros if enhancedFunction has invalid input args with more than 2 args 1`] = `"invalid input for action function [actionFunction] following signature standard of (param: Object, meta?: Object)"`;

exports[`logAction throw erros if enhancedFunction has invalid input args with non-Object as first arg (param) 1`] = `"invalid input for action function [callFunction] following signature standard of (param: Object, meta?: Object)"`;

exports[`logAction throw erros if enhancedFunction has invalid input args with non-Object as second arg (meta) 1`] = `"invalid input for action function [callFunction] following signature standard of (param: Object, meta?: Object)"`;
